--- a/views/contacto.html
+++ b/views/contacto.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a href="../index.html" class="casino-back">⬅ Volver al Casino</a>
+<a href="./index.html" class="casino-back">⬅ Volver al Casino</a>
 
 <main class="page-container">
   <h1>Contacto</h1>
