--- a/views/faqs.html
+++ b/views/faqs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>FAQs | Casino</title>
-  <link rel="stylesheet" href="./css/faqs.css">
+  <link rel="stylesheet" href="../css/faqs.css">
 </head>
 <body>
 
