--- a/views/sobre_nosotros.html
+++ b/views/sobre_nosotros.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Sobre Nosotros | Casino</title>
-  <link rel="stylesheet" href="./css/sobre_nosotros.css">
+  <link rel="stylesheet" href="../css/sobre_nosotros.css">
 </head>
 <body>
 
