Parte de Admin terminada

--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -14,17 +14,17 @@
     <main class="admin-dashboard">
       <section class="admin-card">
         <h3>Usuarios</h3>
-        <a href="../../index.php?controller=Usuario&action=index&carpeta=admin" class="admin-btn"> Gestionar usuarios </a>
+        <a href="../../index.php?controller=Usuario&accion=index&carpeta=admin" class="admin-btn"> Gestionar usuarios </a>
       </section>
 
       <section class="admin-card">
         <h3>Frases</h3>
-        <a href="frases.html" class="admin-btn"> Modificar frases del casino </a>
+        <a href="../../index.php?controller=Frase&accion=index&carpeta=admin" class="admin-btn"> Modificar frases del casino </a>
       </section>
 
       <section class="admin-card">
         <h3>Caballos</h3>
-        <a href="caballos.html" class="admin-btn">Administrar caballos</a>
+        <a href="../../index.php?controller=Caballo&accion=index&carpeta=admin" class="admin-btn">Administrar caballos</a>
       </section>
     </main>
   </body>
