--- a/views/public/tabla.html
+++ b/views/public/tabla.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El juego de la tabla</title>
-    <link rel="stylesheet" href="../css/tabla.css" />
+    <link rel="stylesheet" href="../../css/tabla.css" />
     <!-- <style>
         table{
             width: 750px;
@@ -64,6 +64,6 @@
 
     <a href="../../index.html" class="casino-back"> ⬅ Volver al Casino </a>
 
-    <script src="../js/tabla.js"></script>
+    <script src="../../js/tabla.js"></script>
   </body>
 </html>
