--- a/css/admin.css
+++ b/css/admin.css
@@ -340,3 +340,58 @@ body {
 .file-input-admin::file-selector-button:hover {
   box-shadow: 0 0 10px rgba(255, 68, 68, 0.6);
 }
+
+.btn-crear-algo {
+  display: inline-block;
+  margin-bottom: 20px;
+  padding: 10px 18px;
+
+  background: linear-gradient(145deg, #00d68f, #00a86b);
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+
+  border-radius: 10px;
+  letter-spacing: 0.5px;
+
+  transition: 0.25s ease;
+  margin-left: 20px;
+}
+
+.btn-crear-algo:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 0 15px rgba(0, 214, 143, 0.6);
+}
+
+.btn-crear-algo:active {
+  transform: scale(0.97);
+}
+
+
+.btn-volver-admin {
+  display: inline-block;
+  margin-bottom: 25px;
+  margin-left: 20px;
+  padding: 8px 16px;
+
+  background: #1a1a1a;
+  color: #4da6ff;
+  text-decoration: none;
+  font-weight: 600;
+
+  border: 1px solid #4da6ff;
+  border-radius: 8px;
+
+  transition: 0.25s ease;
+}
+
+.btn-volver-admin:hover {
+  background: #4da6ff;
+  color: #111;
+  box-shadow: 0 0 12px rgba(77, 166, 255, 0.6);
+}
+
+
+.btn-volver-admin:active {
+  transform: scale(0.97);
+}
