--- a/css/index.css
+++ b/css/index.css
@@ -143,9 +143,9 @@ footer .warning {
   top: 0;
   z-index: 100;
 
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
-  justify-content: space-between;
 
   padding: 15px 30px;
   background: linear-gradient(145deg, #0e0e0e, #1a1a1a);
@@ -167,7 +167,8 @@ footer .warning {
 /* NAVEGACIÓN */
 .header-nav {
   display: flex;
-  gap: 25px;
+  gap: 30px;
+  justify-self: center;
 }
 
 .header-nav a {
@@ -202,6 +203,7 @@ footer .warning {
 .header-right {
   display: flex;
   gap: 15px;
+  justify-self: end;
 }
 
 /* LOGIN */
@@ -270,4 +272,85 @@ footer .warning {
 
 .phrases-card a:hover {
   box-shadow: 0 0 15px rgba(0, 255, 240, 0.8);
+}
+
+.user-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.user-button {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  color: #f5d76e;
+  font-weight: 600;
+}
+
+/* FOTO PERFIL */
+.user-button img {
+  width: 38px;
+  height: 38px;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+
+  border-radius: 50%;
+  border: 2px solid #f5d76e;
+
+  transition: 0.3s ease;
+}
+
+/* Hover foto */
+.user-button:hover img {
+  box-shadow: 0 0 12px rgba(245, 215, 110, 0.7);
+  transform: scale(1.05);
+}
+
+.dropdown-menu {
+  position: absolute;
+  right: 0;
+  top: 120%;
+
+  background: linear-gradient(145deg, #0e0e0e, #161616);
+  border: 1px solid #f5d76e;
+
+  border-radius: 12px;
+  padding: 10px 0;
+  min-width: 170px;
+
+  display: none;
+
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
+  backdrop-filter: blur(6px);
+}
+
+.dropdown-menu.active {
+  display: block;
+}
+
+.dropdown-menu a {
+  display: block;
+  padding: 10px 16px;
+
+  color: #ddd;
+  text-decoration: none;
+  font-size: 0.9rem;
+
+  transition: 0.2s ease;
+}
+
+.dropdown-menu a:hover {
+  background: rgba(0, 255, 150, 0.08);
+  color: #00ff99;
+  padding-left: 20px;
+}
+
+.dropdown-menu a:last-child {
+  border-top: 1px solid #222;
+  margin-top: 5px;
+  padding-top: 12px;
 }
