--- a/views/faqs.html
+++ b/views/faqs.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a href="../index.html" class="casino-back">⬅ Volver al Casino</a>
+<a href="../index.php" class="casino-back">⬅ Volver al Casino</a>
 
 <main class="page-container">
   <h1>Preguntas Frecuentes</h1>
