--- a/views/public/tabla.html
+++ b/views/public/tabla.html
@@ -62,7 +62,7 @@
     <button>Abajo</button>
     <button>Izquierda</button>
 
-    <a href="../../index.html" class="casino-back"> ⬅ Volver al Casino </a>
+    <a href="../../index.php" class="casino-back"> ⬅ Volver al Casino </a>
 
     <script src="../../js/tabla.js"></script>
   </body>
