--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="admin-header">
       <h1>Panel de Administración</h1>
-      <a href="../../index.html" class="exit-admin">Salir</a>
+      <a href="../../index.php" class="exit-admin">Salir</a>
     </header>
 
     <main class="admin-dashboard">
